<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jibin.jibin_reji_comp304_001_hands_on_test_1.MainActivity">

    <RadioGroup
        android:id="@+id/radioButtonGrpContacts"
        android:layout_width="304dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="69dp">

        <RadioButton
            android:id="@+id/radioButtonJame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onContactBtnClick"
            android:text="@string/radioButtonJame" />

        <RadioButton
            android:id="@+id/radioButtonJames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onContactBtnClick"
            android:text="@string/radioButtonJames" />

        <RadioButton
            android:id="@+id/radioButtonJibin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onContactBtnClick"
            android:text="@string/radioButtonJibin" />

        <RadioButton
            android:id="@+id/radioButtonJohn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onContactBtnClick"
            android:text="@string/radioButtonJohn" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textViewHeading" />
</RelativeLayout>
